fix icons spacing and remove hover

--- a/public/custom.css
+++ b/public/custom.css
@@ -124,7 +124,7 @@ body {
     background: #000;
 }
 
-.project-list .project-items img {
+.project-list .project-items img.w-full {
     height: 100%;
     opacity: 1;
     transition: 0.4s ease;
@@ -135,7 +135,7 @@ body {
     transition: 0.4s ease;
 }
 
-.project-list .project-items:hover img {
+.project-list .project-items:hover img.w-full {
     transform: scale(1.1);
     opacity: 0.6;
 }
@@ -159,6 +159,12 @@ body {
     bottom: 5%;
     width: 30%;
     left: 20px;
+}
+
+.icon-stats {
+    align-self: center;
+    height: 18px !important;
+    width: auto !important;
 }
 
 .card-comment {
